--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-this repo is nothing more than a collection of scripts in ruby I've used to solve a number 
-of small problems, challenges, and the like.
+this repo is nothing more than a collection of tiny proof of concepts I've
+used to solve a number  of small problems, challenges, and the like.
